gnubiff -- History of visible changes.

Copyright (C) 2000-2005, Nicolas Rougier <Nicolas.Rougier@loria.fr>
See the end for copying conditions.
Please send gnubiff bug reports to gnubiff-bugs@lists.sourceforge.net

Version 2.1.3
 * Robert Sowada
   - Changed version to 2.1.3
   - Bugfix: Detecting FAMCreated
   - Bugfix: Maildir protocol provides uid
   - Cleanup: Using glib functions for directory access (maildir)
   - Bugfix: Obtaining version of gnubiff config file
   - Bugfix: Don't parse already read messages (maildir)
   - Bugfix: Respect "use_max_mail" option (maildir)
   - Bugfix: Reading message body (file)
   - Bugfix: Don't read whole body (maildir)
   - Bugfix: Check pointers in callbacks (in "src/gui.cc")
   - Bugfix: 64bit problem (debian bug #301853); note: The same problem is
        still present multiple times in the code; added this to TODO file;
        thanks to David Mosberger for reporting and fixing this bug
   - Added David Mosberger to contributors
   - Bugfix: Corrected string size types in "src/decoding.*", "src/mailbox.*"
        "src/apop.*", "src/imap4.*", "src/maildir.*", "src/biff.*",
        "src/gtk_image_animation.*", "src/option.*", "src/mh.*",
        "src/header.*" and "src/support.*" (64bit systems)
   - Checked files for incorrect string size type without problems:
        "src/pop.*", "src/maildir.*", "src/file.*", "src/gnubiff.*",
        "src/pop3.*", "src/ui-properties.*" and "src/ui-applet-gnome.*"
   - Bugfix: Crash in image selecting dialogs (thanks to David Mosberger for
        reporting this bug)
   - Feature: More information in unknown_internal_error() provided
   - Documentation of Mailbox::parse()
   - Bugfix: Throw exception if login line cannot be created (apop)
   - Bugfix: "Quit" menu item (gtk applet)
   - Bugfix: Respect "use_max_mail" option (mh)
   - Bugfix: Test pointers in callback functions ("src/gtk_image_animation.cc")

Version 2.1.2		2005-03-26 17:28
 * Robert Sowada