@@ -7,6 +7,7 @@ Please send gnubiff bug reports to gnubiff-bugs@lists.sourceforge.net
 Version 2.1.3
  * Robert Sowada
    - Changed version to 2.1.3
+   - Updated po files, German translation
    - Bugfix: Detecting FAMCreated
    - Bugfix: Maildir protocol provides uid
    - Cleanup: Using glib functions for directory access (maildir)
@@ -35,6 +36,11 @@ Version 2.1.3
    - Bugfix: "Quit" menu item (gtk applet)
    - Bugfix: Respect "use_max_mail" option (mh)
    - Bugfix: Test pointers in callback functions ("src/gtk_image_animation.cc")
+   - Updated Vietnamese translation (thanks to Clytie Siddall)
+   - Bugfix: Substituted protocol dependent test in "src/local.h" (fam)
+   - Bugfix: Detecting FAMDeleted
+   - Bugfix/Feature: New option "file_restore_atime". Note: This results in a
+        changed default behavior!
 
 Version 2.1.2		2005-03-26 17:28
  * Robert Sowada
